# UnityAnalysisCLI

./: CMakeLists.txt  GameObject.cpp  GameObject.h  Process.cpp  Process.h  README.md  Scene.cpp  Scene.h  SceneAnalyzer.cpp  SceneAnalyzer.h  Script.h  main.cpp
libs/yaml-cpp-0.8.0/: ALL_BUILD.vcxproj  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  YAML_CPP.sln  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters  yaml-cpp.vcxproj  yaml-cpp.vcxproj.filters
libs/yaml-cpp-0.8.0/util/: CTestTestfile.cmake  cmake_install.cmake  yaml-cpp-parse.vcxproj  yaml-cpp-parse.vcxproj.filters  yaml-cpp-read.vcxproj  yaml-cpp-read.vcxproj.filters  yaml-cpp-sandbox.vcxproj  yaml-cpp-sandbox.vcxproj.filters
libs/yaml-cpp-0.8.0/util/yaml-cpp-parse.dir/Debug/: parse.exe.recipe
libs/yaml-cpp-0.8.0/util/yaml-cpp-parse.dir/Debug/yaml-cpp-parse.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  yaml-cpp-parse.lastbuildstate
libs/yaml-cpp-0.8.0/util/yaml-cpp-read.dir/Debug/: read.exe.recipe
libs/yaml-cpp-0.8.0/util/yaml-cpp-read.dir/Debug/yaml-cpp-read.tlog/: CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.read.1.tlog  (+2 more)
libs/yaml-cpp-0.8.0/util/yaml-cpp-sandbox.dir/Debug/: sandbox.exe.recipe  sandbox.ilk
libs/yaml-cpp-0.8.0/yaml-cpp.dir/Debug/: yaml-cppd.lib.recipe
libs/yaml-cpp-0.8.0/yaml-cpp.dir/Debug/yaml-cpp static.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/: Args.cpp  Args.h  GameObject.cpp  GameObject.h  Process.cpp  Process.h  Scene.cpp  Scene.h  SceneAnalyzer.cpp  SceneAnalyzer.h  Script.cpp  Script.h
(+14 files in other folders)
